--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ ne<!DOCTYPE html PUBLIC>
 <head>
 <meta charset="UTF-8">
 <title>                               Przekierowanie</title>
-  <meta http-equiv="refresh" content="0; http://www.realnemc.pl/" />
+  <meta http-equiv="refresh" content="0; https://discord.gg/mRmutmK9rJ" />
 </head>
 </html>
