--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@ ne<!DOCTYPE html PUBLIC>
 <html>
 <head>
 <meta charset="UTF-8">
-<title>                               Przekierowanie</title>
+  <b>Przekierowanie...</b>
   <meta http-equiv="refresh" content="0; https://discord.gg/mRmutmK9rJ" />
 </head>
 </html>
