--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <head>
   <link rel="stylesheet" href="style.css" type="text/css"/>
   <div class="preloader"></div>
-  <meta http-equiv="refresh" content="0; http://www.giercraft.pl" />
+  <meta http-equiv="refresh" content="0; https://discord.com/invite/mRmutmK9rJ" />
 </head>
 </html>
